# pytket-dqc

./: .gitignore  MANIFEST.in  README.md  example_notebook.ipynb  pyproject.toml  pytest.ini  setup.py  toy_examples.ipynb
.github/: dependabot.yml
.github/workflows/: deploy_docs.yml  push-test.yml
M1/: M1InstallationGuide.md  setup.py
docs/: docs_requirements.txt
docs/source/: allocators.rst  api.rst  circuits.rst  conf.py  distributors.rst  index.rst  networks.rst  placement.rst  refiners.rst  usage.rst  utils.rst
examples/: 04_02_01.json  06_02_01.json  Jun-Yi UCC.ipynb  allocators.ipynb  basic_usage.ipynb  chem_aware_ansatz.json  distributor_comparison.ipynb  getting_started.ipynb  packing-examples.ipynb  packing.ipynb  packing_examples.ipynb  pacman-example.ipynb  pseudo-packing-examples.ipynb  pseudopacking-examples.ipynb
src/pytket_dqc/: __init__.py  distributed_circuit.py  hypergraph.py
src/pytket_dqc/allocators/: __init__.py  allocator.py  annealing.py  brute.py  gain_manager.py  graph_partitioning.py  hypergraph_partitioning.py  ordered.py  random.py  routing.py
src/pytket_dqc/circuits/: __init__.py  bipartite_circuit.py  distributed_circuit.py  distribution.py  hypergraph.py  hypergraph_circuit.py
src/pytket_dqc/distributors/: __init__.py  annealing.py  bipartite_embedding.py  brute.py  cover_embedding.py  distributor.py  gain_manager.py  graph_partitioning.py  km1_kKaHyPar_sea20.ini  ordered.py  partitioning_embedding.py  partitioning_heterogeneous.py  random.py  routing.py
src/pytket_dqc/networks/: __init__.py  module_network.py  network.py  nisq_network.py  random_networks.py  server_network.py
src/pytket_dqc/packing/: __init__.py  packing.py  pacman.py
src/pytket_dqc/packing_on_output/: __init__.py  (+1 more)
tests/: allocator_test.py  circuits_test.py  coarsening_test.py  distribution_test.py  distributor_test.py  gain_manager_test.py  kahypar_test.py  network_test.py  pacman_test.py  placement_test.py  refiner_test.py  test_requirements.txt  utils_test.py
tests/test_circuits/: 2f1cc964-1518-4109-97ca-5538906a3dff.json  chemistry_aware_embedding_detatched.json  chemistry_aware_post_vertex_cover.json  f9f22168-8168-48ad-baed-aceb2c9aca4d.json  frac_CZ_6.json  not_valid_circ.json  pauli_6.json  pr78_distribution.json  random_width_5_depth_5.json  vertex_cover_assert_architecture.json  vertex_cover_assert_circuit.json
(+188 files in other folders)
