[build-system]
requires=["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pytket-dqc"
version = "0.0.1"
requires-python = ">= 3.8"
dependencies = [
    'numpy >=1.26, <2.3',
    'pytket >=1.31, <2.1',
    'hypernetx >=1.2, <2.5',
    'celluloid >=0.2, <0.3',
    'igraph >=0.11.8, <0.10',
    'decorator >=5.1.0, <5.2',
    'pygraphviz >=1.14, <1.15',
    'importlib_resources >=5.7.1, <5.8',
    'pyzx >=0.7.0, <0.8',
    'pytket-pyzx >=0.24.0, <0.25',
]

[project.optional-dependencies]
tests = [
    'mypy >=0.920, <0.921',
    'pytest >=6.2.5, <6.3',
    'pytest-cov >=4.0.0, <4.1',
    'ruff >=0.9.9, <0.10',
    'nbmake >=1.5.5, <1.6',
]
docs = [
    'sphinx >=8, <8.1',
    'sphinx-rtd-theme >=3.0.2, <3.1',
]