[build-system]
requires=["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pytket-dqc"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    'numpy >=1.26, <2.3',
    'pytket >=1.31, <2.12',
    'hypernetx >=1.2, <2.5',
    'celluloid >=0.2, <0.3',
    'igraph >=0.11.8, <1.1',
    'decorator >=5.1.0, <5.3',
    'pygraphviz >=1.14, <1.15',
    'importlib_resources >=5.7.1, <6.6',
    'pyzx >=0.7.0, <0.10',
    'pytket-pyzx >=0.24.0, <0.36',
]

[project.optional-dependencies]
tests = [
    'mypy >=1.15.0, <1.20',
    'pytest >=6.2.5, <9.1',
    'pytest-cov >=4.0.0, <7.1',
    'ruff >=0.9.9, <0.15',
    'nbmake >=1.5.5, <1.6',
]
docs = [
    'sphinx >=8, <8.3',
    'sphinx-rtd-theme >=3.0.2, <3.1',
]
